Created file config

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>SnowFall</title>
 </head>
 <body>
     
+    <script src="src/Class/Snow.js"></script>
+    <script src="Controller/Controller.js"></script>
+    <script src="config.js"></script>
 </body>
 </html>
