--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/style.css">
     <title>SnowFall</title>
+    <style>
+        body{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        main{width: 100%;height: 100vh;}
+    </style>
 </head>
 <body>
-    
+   <main>
+
+   </main>
     <script src="src/Class/Snow.js"></script>
     <script src="Controller/Controller.js"></script>
     <script src="config.js"></script>
